[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "mangonetwork-level1"
dynamic = ["version"]
description = "MANGO network level 1 image processing"
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
authors = [
    { name='Asti Bhatt', email='asti.bhatt@sri.com' },
    { name='Leslie Lamarche', email='leslie.lamarche@sri.com' },
    { name='Todd Valentic', email='todd.valentic@gmail.com' }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "h5py",
    "pandas",
    "matplotlib",
    "importlib_resources>1.3; python_version < '3.10'"
]

[project.optional-dependencies]
test = [
    'pytest',
    'pyfakefs',
    'pylint',
    'black'
]
devel = [
    'build'
]

[project.urls]
homepage="https://www.mangonetwork.org"
repository="https://github.com/mangonetwork/level1-image-processing"

[project.scripts]
    mango-process-level1 = "mangonetwork.level1.process_level1:main"
    #mango-calibrate = "mangonetwork.raw.calibrate:main"
    #mango-keograms = "mangonetwork.raw.keograms:main"
    #mango-quicklook-movies = "mangonetwork.raw.quicklook_movies:main"
    #mango-starcal = "mangonetwork.raw.starcal:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "mangonetwork.level1.__version__"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]

